# docker-mineru

./: .containerignore  .dockerignore  .env.example  .flaskenv  .gitignore  Containerfile  Dockerfile  LICENSE.txt  Makefile  argfile.conf  conf.py  entrypoint.sh  gunicorn.conf.py  image.awk  magic-pdf.json.template  mineru-app.service  mineru-app.service.template  mineru-queue.service  mineru-queue.service.template  mineru.json.template  pyproject.toml  requirements-dev.txt  requirements.txt
patches/: 01-disable-multipleprocess.patch
src/mineru_pdf/: __init__.py  auth.py  celery.py  config.py  constants.py  exceptions.py  models.py  presenters.py  requests.py  subscribers.py  tasks.py
src/mineru_pdf/api/: __init__.py  extract_v2.py  tasks.py
src/mineru_pdf/api/v1/: parser.py
src/mineru_pdf/api/v2/: extractor2.py
src/mineru_pdf/api/v3/: tasks.py
src/mineru_pdf/api/v4/: parser.py  tasks.py
src/mineru_pdf/cli/: extraction.py  parse.py  parser.py  storage.py  token.py
src/mineru_pdf/migrations/: alembic.ini
src/mineru_pdf/migrations/versions/: 20250320183316@51865bb59b0b_create_tasks_table.py  20250321195102@e2d7db071bae_remove_useless_columns_from_tasks_table.py  20250512104148@e356713d739b_added_column_errors_in_table_tasks.py  (+2 more)
src/mineru_pdf/tasks/: constants.py  exceptions.py  extractions.py  miner.py  mineru.py
src/mineru_pdf/utils/: casts.py  celeryq.py  coords.py  exceptions.py  extract.py  fileguard.py  filepath.py  http.py  httpclient.py  integrators.py  magicfile.py  magicpdf.py  mineru.py  presenters.py  requests.py  task.py
