[project]
name = "mineru_pdf"
dynamic = [
  "version", "dependencies",
]
authors = [
  { name="李丁", email="liding@kingyee.com.cn" },
]
description = "MinerU PDF 解析服务"
readme = "README.rst"
requires-python = "==3.10"
classifiers = [
    "Private :: Do Not Upload",
    "Framework :: Flask",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "http://git.kydev.net/dev2/mineru-pdf"
Issues = "http://git.kydev.net/dev2/mineru-pdf/-/issues"

[build-system]
requires = [
  "hatchling >= 1.26",
  "hatch-requirements-txt >= 0.4.1",
  "versioningit >= 3.1.2",
]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [ "_version.py" ]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.version.format]
distance = "{base_version}.post{distance}"
distance-dirty = "{base_version}.post{distance}+dirty{build_date:%Y%m%d}"
dirty = "{base_version}+dirty{build_date:%Y%m%d}"

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt" ]
